# osis-utils

./: .gitignore  Makefile.in  aclocal.m4  config.h.in  configure  configure.in  mkinstalldirs
src/: .cvsignore  .gitignore  Makefile.am  Makefile.in  lines.c
